bug fix arrow align center

--- a/src/components/HeaderDropdown/index.less
+++ b/src/components/HeaderDropdown/index.less
@@ -8,7 +8,7 @@
 .container {
   padding: 0 !important;
   :global(.ant-dropdown-arrow) {
-    top: -3.5px;
+    top: -3.5px !important;
   }
 }
 .dropdownWrapper {
